Update sample to prevent certificate file caching

--- a/sample.html
+++ b/sample.html
@@ -779,7 +779,7 @@
     /// Authentication setup ///
     qz.security.setCertificatePromise(function(resolve, reject) {
         //Preferred method - from server
-//        $.ajax("assets/signing/digital-certificate.txt").then(resolve, reject);
+//        $.ajax({ url: "assets/signing/digital-certificate.txt", cache: false, dataType: "text" }).then(resolve, reject);
 
         //Alternate method 1 - anonymous
 //        resolve();
