Add tooltips to sample.html

--- a/sample.html
+++ b/sample.html
@@ -202,7 +202,9 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group form-inline">
-                                                <label for="rawAltPrinting">Alternate Printing</label>
+                                                <label class="tip" for="rawAltPrinting" data-toggle="tooltip" title="Bypass driver when using CUPS">
+                                                    Alternate Printing
+                                                </label>
                                                 <input type="checkbox" id="rawAltPrinting" class="pull-right" />
                                             </div>
 
@@ -261,7 +263,7 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group form-inline">
-                                                <label for="pDotDensity">Dot Density</label>
+                                                <label class="tip" for="pDotDensity" data-toggle="tooltip" title="For ESCPOS only">Dot Density</label>
                                                 <input type="text" id="pDotDensity" class="form-control pull-right" />
                                             </div>
                                             <div class="form-group form-inline">
