I forgot how promises work

--- a/sample.html
+++ b/sample.html
@@ -1967,11 +1967,14 @@
     /// Status ///
     function startPrintersListen(printerName) {
         //It is not necessary to stop listening when starting a new listener. It is done here for interface reasons.
-        qz.printers.stopListening().then(
-            qz.printers.startListening(printerName).then(function() {
-                displayMessage("Started listening for printer events");
-            }).catch(displayError)
-        ).catch(displayError);
+        qz.printers.stopListening()
+        .then(function() {
+            return qz.printers.startListening(printerName);
+        })
+        .then(function() {
+            displayMessage("Started listening for printer events");
+        })
+        .catch(displayError);
     }
 
     function getPrintersStatus() {
